kubernets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-file
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: django-file
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 3000
